# karpathy_school

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
.linters/: .pylintrc  fix_all_files_with_iwyu.sh  iwyu.imp
0_micrograd_cpp/: CMakeLists.txt
0_micrograd_cpp/include/: layer.hpp  mlp.hpp  module.hpp
0_micrograd_cpp/include/ops/: cos.hpp  exp.hpp  mul.hpp  neg.hpp  op.hpp  pow.hpp
0_micrograd_cpp/src/: graph.cpp  main.cpp  mlp.cpp  neuron.cpp  value.cpp
0_micrograd_cpp/src/ops/: add.cpp  cos.cpp  mul.cpp  op.cpp  pow.cpp  sub.cpp  tanh.cpp
0_micrograd_cpp/test/: test_graph.cpp  test_layer.cpp
0_micrograd_cpp/test/data/: BackProp.txt  CompoundOps.txt  LinearLayer.txt  LinearNeuron.txt  SimpleGraph.txt  SimpleMLP.txt  TanhSpelledOut.txt  TrainMLP.txt
1_makemore_bigram/: README.md
1_makemore_bigram/makemore_bigram/: inference.py  metrics.py  models.py  preprocessing.py
1_makemore_bigram/makemore_bigram/utils/: paths.py
1_makemore_bigram/tests/: test_inference.py  test_inference_helper.py  test_models.py  test_preprocessing.py  test_train.py  test_train_helper.py  test_visualisation.py
2_makemore_mlp/makemore_mlp/: __init__.py  inference.py  predict.py  preprocessing.py  train.py  visualisation.py
2_makemore_mlp/makemore_mlp/tests/: test_models.py  test_train.py
2_makemore_mlp/makemore_mlp/utils/: paths.py
3_makemore_agb/makemore_agb/: data_classes.py  evaluation.py  linear.py  module.py  preprocessing.py  train.py
3_makemore_agb/makemore_agb/tests/: test_distribution_diagnostics.py  test_models.py  test_preprocessing.py
4_makemore_backprop_ninja/: REAMDE.md
4_makemore_backprop_ninja/makemore_backprop_ninja/: data_classes.py  inference.py  models.py  predict.py  preprocessing.py  train.py
4_makemore_backprop_ninja/makemore_backprop_ninja/backprop_helpers/: succinct_backprop.py
4_makemore_backprop_ninja/makemore_backprop_ninja/tests/: test_models.py  test_train.py
5_makemore_wavenet/makemore_wavenet/: __init__.py  evaluation.py  module.py  preprocessing.py  visualisation.py
5_makemore_wavenet/makemore_wavenet/ops/: flatten.py  linear.py  tanh.py
5_makemore_wavenet/makemore_wavenet/tests/: test_inference.py  test_models.py  test_train.py
6_gpt_from_scratch/: REAMDE.md
6_gpt_from_scratch/gpt_from_scratch/: __init__.py  evaluation.py  inference.py  models.py  preprocessing.py  train.py  visualisation.py
6_gpt_from_scratch/gpt_from_scratch/ops/: batchnorm1d.py  embedding.py  flatten.py  linear.py  tanh.py
6_gpt_from_scratch/gpt_from_scratch/tests/: test_inference.py  test_models.py  test_preprocessing.py  test_train.py
6_gpt_from_scratch/gpt_from_scratch/utils/: logger.py  paths.py
makemore_activation_gradient_batchnorm/: REAMDE.md
makemore_agb/makemore_agb/: __init__.py  batchnorm1d.py  data_classes.py  distribution_diagnostics.py  embedding.py  evaluation.py  inference.py  linear.py  models.py  module.py  predict.py  preprocessing.py  tanh.py  train.py  train_diagnostics.py  visualisation.py
makemore_agb/makemore_agb/tests/: test_distribution_diagnostics.py  test_inference.py  test_models.py  test_preprocessing.py  test_train.py
makemore_agb/makemore_agb/utils/: paths.py
makemore_backprop_ninja/: REAMDE.md
makemore_backprop_ninja/makemore_agb/: batchnorm1d.py  models.py  predict.py  train.py  train_diagnostics.py  visualisation.py
makemore_backprop_ninja/makemore_agb/tests/: test_models.py  test_train.py
makemore_backprop_ninja/makemore_backprop_ninja/: __init__.py  batchnorm1d.py  data_classes.py  distribution_diagnostics.py  embedding.py  evaluation.py  inference.py  linear.py  models.py  predict.py  preprocessing.py  tanh.py  train.py  train_diagnostics.py  visualisation.py
makemore_backprop_ninja/makemore_backprop_ninja/backprop_helpers/: __init__.py  dataclasses.py  gradients.py  succinct_backprop.py  verbose_backprop.py
makemore_backprop_ninja/makemore_backprop_ninja/tests/: test_distribution_diagnostics.py  test_inference.py  test_models.py  test_preprocessing.py  test_train.py
makemore_backprop_ninja/makemore_backprop_ninja/utils/: paths.py
makemore_bigram/makemore_bigram/: __init__.py  inference.py  metrics.py  models.py  preprocessing.py  train.py  visualisation.py
makemore_bigram/makemore_bigram/utils/: inference_helper.py  paths.py  train_helper.py
makemore_bigram/tests/: test_inference.py  test_metrics.py  test_models.py  test_preprocessing.py  test_train.py  test_train_helper.py  test_visualisation.py
makemore_mlp/: REAMDE.md
makemore_mlp/makemore_mlp/: __init__.py  data_classes.py  evaluation.py  inference.py  models.py  options.py  predict.py  preprocessing.py  train.py  visualisation.py
makemore_mlp/makemore_mlp/tests/: test_inference.py  test_preprocessing.py  test_train.py
makemore_wavenet/: REAMDE.md
makemore_wavenet/makemore_wavenet/: __init__.py  data_classes.py  distribution_diagnostics.py  evaluation.py  inference.py  linear.py  models.py  predict.py  preprocessing.py  tanh.py  train.py  train_diagnostics.py  visualisation.py
makemore_wavenet/makemore_wavenet/ops/: batchnorm1d.py  embedding.py  flatten.py  linear.py  tanh.py
micrograd_cpp/: CMakeLists.txt  README.md
micrograd_cpp/include/: graph.hpp  layer.hpp  mlp.hpp  module.hpp  neuron.hpp  op.hpp  print_graph.hpp  value.hpp
micrograd_cpp/src/: graph.cpp  layer.cpp  main.cpp  mlp.cpp  module.cpp  neuron.cpp  print_graph.cpp  value.cpp
micrograd_cpp/test/: test_graph.cpp  test_layer.cpp  test_mlp.cpp  test_neuron.cpp
(+35 files in other folders)
